[package]
name = "ct"
version = "0.1.0"
authors = ["Peter Morrow <pdmorrow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
rust-ini = "0.17"
log = "0.4"
flexi_logger = { version = "0.17", default_features = false }
bitmask-enum = "1.1.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9.3"
hmac = "0.10.1"
hex = "0.4.3"
libmath = "0.2.1"
websocket = "0.26.2"

[profile.release]
lto=true
opt-level=3
